Fix column header spacing

--- a/app/assets/stylesheets/ui/columns.css.scss
+++ b/app/assets/stylesheets/ui/columns.css.scss
@@ -73,6 +73,8 @@
 
   .remove-column     { right: 0; }
   .edit-column-title { right: 20px; }
+
+  .select2-container { width: 100%; margin-bottom: 5px; }
 }
 
 .column:hover .column-header .glyphicon {
@@ -83,7 +85,7 @@
   width: 100%;
   outline: none;
   margin: 0;
-  padding-bottom: 10px;
+  padding: 5px 0;
   font-size: 27px;
 }
 
